@@ -2,7 +2,7 @@ AUX postinstall-en.txt 790 RMD160 a2af2740cbd01bfe9b3e62f5a894b330ade9bca0 SHA1 
 AUX postinstall-ru.txt 5 RMD160 79f099de2103f8a55f3cb1b35b95e368ace117d9 SHA1 4e1243bd22c66e76c2ba9eddc1f91394e57f9f83 SHA256 f2ca1bb6c7e907d06dafe4687e579fce76b37e4e93b7605022da52e6ccc26fd2
 AUX reconfig 1195 RMD160 0d117635fed33f01b33a5b499a4ed2ed665e495a SHA1 ae2ee5ebd637757f91d1867488c25458f3f34ce0 SHA256 e102ea4166e31ce5b780a8cbe5c0b9d073289a0e42aecb2dd635a273687c38ea
 AUX spectre 597 RMD160 5cc12c360a87e4b2b3e8eae649464a073c12da89 SHA1 ec596705edcac97782b0107305dc73b5908a7a8d SHA256 1f8a7d7b1b2f399f6b9dc4ae843a4aecbcd2a5aa9ca5988242e7a3fc45834751
-DIST webgui-7.9.0-beta.tar.gz 20262089 RMD160 5d2ec27503ebf80aab4c0b9df1dae4bcd9ba5a3f SHA1 2a82edf57289dc5b664e766cbdf3fff81d8bd032 SHA256 1f47c35c63dd63d9522aa848e1c588033b4271ba2664c092a3721fbea73caefd
-EBUILD webgui-7.9.0.ebuild 3551 RMD160 1c94cc14566b8e46758214fc98a68fa57bb4f67a SHA1 3a8352ad248dc84f236462eed32e2d0e9aa04109 SHA256 11016d3fe635e1709e0ceec616a0ebdd40720f5e0043e74df556bb000050591c
-MISC ChangeLog 628 RMD160 d45a5e20a76ef84f05feb4db7258bb6a7becc7f7 SHA1 0f228e13ae2ac52d5197063ca9b995a95fa9265f SHA256 561ebf246fb87e2e99722dac0a064d6f6891719be7e9e1734838154c1a1df23d
+DIST webgui-7.9.1-beta.tar.gz 20290426 RMD160 618e4b12853f30671aaa3f42310924fa6ed92392 SHA1 8a9694251dbd01f407b2f01b4db57dd4af9d0d4d SHA256 80343993980285536fb07966373b81d72b21e8f8ddee34f584dd1459189575fc
+EBUILD webgui-7.9.1.ebuild 3743 RMD160 f96c83fa2f06ac5343d5c4598d3aca10404afa17 SHA1 d1e991ae62f85563a912d6e0ed9d942c6a8b507d SHA256 6bd14f0d8f8e853403a8aee9b6892137bbaca49a729848d17f9fc5a876588e06
+MISC ChangeLog 735 RMD160 e4e99822eba08229b7e22666aba01c855d9fe3f2 SHA1 515a23c7437e2c13b301346fddabf46405a52dfc SHA256 10a7b269a4aabfffc0407d4f8698b700309b3b4e8c2d9c7cce2ec8a55bc8ae12
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
