@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> -webgui-7.9.0.ebuild,
+  +webgui-7.9.1.ebuild:
+  bump
+
   24 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> webgui-7.9.0.ebuild,
   -files/postinstal-ru.txt, +files/postinstall-en.txt,
   +files/postinstall-ru.txt, files/reconfig:
